# ChangeLog

0.7.0rc2
    * Support thermal model errors (FW 3.12)
    * USB Camera
    * SD Card fixes
    * Fix MBL data for MK2.5(S)
    * Wizard refactoring
    * Static web update
        - Camwras
        - File sorting
    * API Settings moved from Wizard to Settings
    * Raspberry Pi Camera support

0.7.0rc1
    * Work around a bug: printer in serial print mode while wizard is shown
    * READY state changed to IDLE, PREPARED state changed to READY
    * New status display
       - notifies about setup wizard,
       - shows upload progress
       - shows the name of a file being printed
       - notifies about errors
       - shows an idle screen with the IP address after 30min
       - add idle screen and show transfers during print pauses

    * Name and location of printer value validation
    * Fix negative timeout being possible in serial read
    * Additional Connect (un)registration support
    * File and Directory name validation refactoring
    * Fixed transfer and print in ATTENTION error
    * New Connect API support
    * Fix PrusaLink IP not getting reset from printer on shutdown
    * Fix the serial_number step in wizard
    * Fix unicode characters in file names breaking lcd printer
    * Make RESET_PRINTER clear the command queue and have priority that way
    * Made the app stop itself faster
    * Use M400 instead of G4 for printer queue syncing
    * Reworked validation of correct S/N write
    * Modified username length and password length and format validation
    * Use "Sync|->:" and "Sync->|:" to signify which way is the current transfer going
    * Add DNS service discovery compatible with PrusaSlicer
    * Support file upload cancels from PrusaSlicer
    * Static web update:
       - Fix big log files displaying
       - Decrease display log file size limit to 1M
       - Change temperature controls widget number format to display integers
       - Add stop/resume print button