@@ -11,6 +11,7 @@
         - File sorting
     * API Settings moved from Wizard to Settings
     * Raspberry Pi Camera support
+    * Added cache control headers for cameras snap endpoints
 
 0.7.0rc1
     * Work around a bug: printer in serial print mode while wizard is shown
